--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,48 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  background-color: #19222A;
+  color: #fff;
+}
+
+#container {
+  width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #424549;
+  border-radius: 10px;
+  border: 2px solid #e74c3c;
+}
+
+h1 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+label {
+  font-weight: bold;
+  color: #424549;
+  display: block;
+  margin-bottom: 5px;
+}
+
+input {
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #424549;
+  border-radius: 3px;
+  margin-bottom: 10px;
+  margin-right: 50px;
+}
+
+button {
+  padding: 8px 25px;
+  font-size: 12px;
+  border: 1px solid #FFE603;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  background-color: #FFE603;
+  color: #000000;
 }
