--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,31 +6,35 @@ body {
   color: #fff;
 }
 
+.header {
+  text-align: center;
+  background-color: #FFE603;
+  padding: 60px;
+}
+
+.header h1{
+  color: #19222A;
+  font-weight: bold;
+}
+
 #container {
   width: 600px;
-  height: 400px;
   margin: 20px auto;
   padding: 20px;
   box-sizing: border-box;
   background-color: #242425;
-  border-radius: 10px;
-  border: 10px solid #424549;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-h1 {
-  font-size: 18px;
-  font-weight: bold;
+  border-radius: 50px;
+  border: 15px solid #424549;
+  margin-top: 50px;
 }
 
 label {
   font-weight: bold;
+  font-size: 16px;
   color: #424549;
   display: block;
   margin-bottom: 5px;
+  margin-left: 50px;
 }
 
 input {
@@ -39,15 +43,37 @@ input {
   border: 1px solid #424549;
   border-radius: 3px;
   margin-bottom: 10px;
-  margin-right: 50px;
+  width: 250px;
+  margin-left: 50px;
+  margin-right: 120px;
 }
 
 button {
-  padding: 8px 25px;
+  padding: 7px 25px;
   font-size: 12px;
   border: 1px solid #FFE603;
-  border-radius: 5px;
+  border-radius: 18px;
   margin-bottom: 20px;
   background-color: #FFE603;
   color: #000000;
+  cursor: pointer;
+  transition: transform 0.3s ease; 
+}
+
+button:hover {
+  transform: scale(1.1); 
+}
+
+.btn-container {
+  text-align: center;
+  margin-top: 50px;
+}
+
+#homeButton {
+  display: inline-block;
+  margin-right: 50px;
+}
+
+#homeButton, #deleteButton{
+  width: 150px;
 }
