--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,13 @@ body {
   color: #fff;
 }
 
+.maincontainer {
+  /* Optional: Adjust margin and padding as needed */
+  margin: 10px;
+  padding: 10px;
+  border: 2px solid #FFE603;
+}
+
 .header {
   text-align: center;
   background-color: #FFE603;
