--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,6 +68,19 @@ body {
   border: 15px solid #424549;
   margin-top: 50px;
 }
+#center-container {
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.preview{
+  width: 100%;
+  height: 150%;
+  border-radius: 5px;
+  border: 15px solid #424549;
+}
 
 label {
   font-weight: bold;
