--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,9 +77,14 @@ body {
 }
 .preview{
   width: 100%;
-  height: 150%;
+  height: 350px;
   border-radius: 5px;
-  border: 15px solid #424549;
+  border: 5px solid #424549;
+  background-image: url('..\src\assets\sample_presentation.png');
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+
 }
 
 label {
