--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,12 +79,24 @@ body {
   width: 100%;
   height: 350px;
   border-radius: 5px;
-  border: 5px solid #424549;
+  border: 3px solid #FFE603;
   background-image: url('..\src\assets\sample_presentation.png');
   background-size: cover;
   background-position: center;
   height: 300px;
+}
 
+.configurations{
+  width: 50%;
+  height: 350px;
+  border-radius: 5px;
+  border: 3px solid #FFE603;
+  background-color: #424549;
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 label {
