--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,37 +1,62 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
   font-family: 'Arial', sans-serif;
   background-color: #19222A;
   color: #fff;
 }
 
+.container {
+  display: flex;
+  min-height: 100vh; 
+  min-width: 100vh; 
+  width: 100%; 
+}
+
+.left-panel {
+  flex: 1;
+  background-color: #151718;
+}
+
+.right-panel {
+  flex: 3;
+  background-color: #19222A; 
+}
+
+.logo {
+  max-width: 100%;
+  max-height: 100px; 
+  margin-top: 100px;
+  margin-left: 35%;
+}
+
 .header {
   text-align: center;
-  background-color: #FFE603;
-  padding: 60px;
+  background-color: #19222A;
+  padding: 40px;
 }
 
 .header h1{
-  color: #19222A;
+  color: white; 
   font-weight: bold;
 }
 
-#container {
+#form-container {
   width: 600px;
   margin: 20px auto;
   padding: 20px;
   box-sizing: border-box;
-  background-color: #242425;
+  background-color: #36393E;
   border-radius: 50px;
   border: 15px solid #424549;
-  margin-top: 50px;
+  margin-top: 90px;
 }
 
 label {
   font-weight: bold;
   font-size: 16px;
-  color: #424549;
+  color: #70757d;
   display: block;
   margin-bottom: 5px;
   margin-left: 50px;
@@ -40,12 +65,14 @@ label {
 input {
   padding: 8px;
   font-size: 14px;
-  border: 1px solid #424549;
-  border-radius: 3px;
+  border: 1px solid #242425;
+  border-color: #36393E;
   margin-bottom: 10px;
   width: 250px;
   margin-left: 50px;
   margin-right: 120px;
+  background-color: #36393E;
+  color: #fff;
 }
 
 button {
@@ -58,6 +85,9 @@ button {
   color: #000000;
   cursor: pointer;
   transition: transform 0.3s ease; 
+  font-weight: bold;
+  border-color: #000000;
+  border-width: 2px;
 }
 
 button:hover {
@@ -66,7 +96,7 @@ button:hover {
 
 .btn-container {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 60px;
 }
 
 #homeButton {
@@ -77,3 +107,25 @@ button:hover {
 #homeButton, #deleteButton{
   width: 150px;
 }
+
+.yellow-box{
+  background-color: yellow;
+  height: 100px;
+  width: 90%;
+  margin-left: 50px;
+}
+
+.user{
+  background-color: #36393E;
+  align-items: center;
+  height: 50px;
+  width: 400px;
+  margin-left: 30%;
+  border-radius: 30px;
+  margin-top: -25px;
+}
+
+.user h1{
+  color: white;
+}
+
