--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,7 +87,7 @@ body {
 }
 
 .configurations{
-  width: 50%;
+  width: 35%;
   height: 350px;
   border-radius: 5px;
   border: 3px solid #FFE603;
@@ -97,6 +97,10 @@ body {
   height: 300px;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.configurations label{
+  color: #ffffff;
 }
 
 label {
