--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,9 +8,10 @@ body {
 }
 
 .maincontainer {
+  height: fit-content;
   margin: 10px;
   padding: 10px;
-  height: 100%;
+  height: fit-content;
   border: 2px solid #FFE603;
   border-radius: 5px;
 }
@@ -35,6 +36,7 @@ body {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 10px;
   padding: 10px;
+  width: fit-content;
   border: 2px solid #FFE603;
   border-radius: 5px;
   text-align: left;
@@ -72,39 +74,42 @@ body {
   border: 15px solid #424549;
   margin-top: 50px;
 }
+
 #center-container {
-  text-align: left;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  padding: 5px;
+  height: fit-content; 
 }
-.preview{
-  width: 100%;
-  height: 350px;
+
+.preview {
+  width: 150vh;
+  height: 60vh; 
+  max-height: 80vh; 
   border-radius: 5px;
   border: 3px solid #FFE603;
   background-image: url('..\src\assets\sample_presentation.png');
   background-size: cover;
   background-position: center;
-  height: 300px;
 }
 
-.configurations{
+.configurations {
   width: 35%;
-  /* height: 450px; */
+  height: 100%; 
+  max-height: 80vh; 
   border-radius: 5px;
   border: 3px solid #FFE603;
   background-color: #424549;
   background-size: cover;
   background-position: center;
-  height: 300px;
   margin-left: 20px;
   margin-right: 20px;
   padding-top: 10px;
-  padding-bottom: 70px;
   padding-right: 5px;
 }
+
 
 .button-container{
   display: flex;
@@ -117,7 +122,6 @@ body {
 .configurations label{
   color: #ffffff;
 }
-
 label {
   font-weight: bold;
   font-size: 16px;
@@ -148,7 +152,6 @@ button {
   color: #000000;
   cursor: pointer;
   transition: transform 0.3s ease; 
-  margin-top: 100px;
 }
 #mybutton {
   margin-bottom: 0 !important;
@@ -178,52 +181,6 @@ button:hover {
   width: 80%;
 }
 
-/* @media (max-width: 1500px) {
-  .maincontainer {
-    width: 98%;
-    height: 670px;
-  }
-}
-
-@media (max-height: 650px) {
-  .slider {
-    width: 75%;
-  }
-
-  button{
-    margin-top: 100px;
-  }
-}
-
-@media (max-width: 1000px) {
-  .slider {
-    width: 70%;
-  }
-
-  button{
-    margin-top: 90px;
-  }
-}
-
-@media (max-width: 768px) {
-  .slider {
-    width: 60%;
-  }
-
-  button{
-    margin-top: 80px;
-  }
-}
-
-@media (max-width: 576px) {
-  .slider {
-    width: 50%;
-  }
-
-  button{
-    margin-top: 0p7x;
-  }
-} */
 
 @media (max-width: 1500px) {
   .maincontainer {
@@ -238,7 +195,7 @@ button:hover {
   }
 
   button{
-    margin-top: 100px;
+    margin-top: 20px;
   }
 }
 
@@ -248,7 +205,7 @@ button:hover {
   }
 
   button{
-    margin-top: 90px;
+    margin-top: 20px;
   }
 }
 
@@ -256,18 +213,14 @@ button:hover {
   .slider {
     width: 60%;
   }
-
-  button{
-    margin-top: 80px;
+  .preview{
+    width: 190vh;
+    height: 70vh; 
   }
 }
 
 @media (max-width: 576px) {
   .slider {
     width: 50%;
-  }
-
-  button{
-    margin-top: 70px;
   }
 }
