--- a/frontend/src/settingsStyles.css
+++ b/frontend/src/settingsStyles.css
@@ -1,4 +1,12 @@
-
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Arial', sans-serif;
+  background-color: #19222A;
+  color: #fff;
+}
 
 .container {
   display: flex;
